v3.0 changes!
(+)Support for windows inbuilt voices(COMPLETELY FREE!) and unlimited quota.
(+)Change default team keybind to v, the voice speak no longer spams the key in a typeable window!
(+)Faster response times on the message dictation!
(+)Automatic valorant voice settings sync
(+)Lower app RAM usage and Lower storage space.
(+)Auto PushToTalk fixes and xmpp improvements.
(+)Ability to block/unlock messages from certain players.
(+)Faster messages dictation times on INBUILT windows voices.
(+)Tweaks to the UI.